--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<span class="loginwith">Sign in with <br />Social Network</span>
 				<button class="social-signin facebook">Log in with Facebook</button>
 				<button class="social-signin twitter">Log in with Twitter</button>
-				<button class="social-signin google+">Log in with Google+</button>								
+				<button class="social-signin google">Log in with Google+</button>								
 			</div>
 
 			<div class="or">OR</div>
